cluster/base/infrastructure/24-opa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: security
  labels:
    app.kubernetes.io/name: opa
spec:
  selector:
    app.kubernetes.io/name: opa
  ports:
    - name: grpc-authz
      port: 9191
      targetPort: grpc-authz
      protocol: TCP

    - name: http-api
      port: 8181
      targetPort: http-api
      protocol: TCP
